Fixed indent and static import
Change-Id: I39dfcea0077e68d087e23e1cc0fa3668289e40cb