@@ -18,6 +18,8 @@ package com.android.libcore.timezone.telephonylookup;
 import static com.android.libcore.timezone.telephonylookup.TelephonyLookupProtoFileSupport.parseTelephonyLookupTextFile;
 import static com.android.libcore.timezone.telephonylookup.TelephonyLookupXmlFile.MobileCountryOverride;
 
+import static java.util.Comparator.comparing;
+
 import com.android.libcore.timezone.telephonylookup.proto.TelephonyLookupProtoFile;
 import com.android.libcore.timezone.util.Errors;
 import com.android.libcore.timezone.util.Errors.HaltExecutionException;
@@ -29,7 +31,6 @@ import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
@@ -91,10 +92,10 @@ public final class TelephonyLookupGenerator {
                     extractNetworks(mobileCountriesIn);
 
             List<TelephonyLookupProtoFile.Network> networksIn =
-                    telephonyLookupIn.getNetworksList().stream().sorted(
-                            Comparator.comparing(TelephonyLookupProtoFile.Network::getMcc)
+                    telephonyLookupIn.getNetworksList().stream()
+                            .sorted(comparing(TelephonyLookupProtoFile.Network::getMcc)
                                     .thenComparing(TelephonyLookupProtoFile.Network::getMnc))
-                    .collect(Collectors.toList());
+                            .toList();
 
             validateNetworks(networksIn, errors);
             errors.throwIfError("One or more validation errors encountered");
@@ -342,7 +343,7 @@ public final class TelephonyLookupGenerator {
         knownIsoCountryCodes =
                 knownIsoCountryCodes.stream()
                         .map(x -> x.toLowerCase(Locale.ROOT))
-                        .collect(Collectors.toList());
+                        .toList();
         return new HashSet<>(knownIsoCountryCodes);
     }
 
